versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/RutherfordScattering.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalRutherfordScattering
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function RutherfordScatteringDefaultConst() &
      bind(C, name='RutherfordScatteringDefaultConst')
   use iso_c_binding
   implicit none
   type(c_ptr) :: RutherfordScatteringDefaultConst
end function RutherfordScatteringDefaultConst

!! Create, default, non-const
function RutherfordScatteringDefault() &
      bind(C, name='RutherfordScatteringDefault')
   use iso_c_binding
   implicit none
   type(c_ptr) :: RutherfordScatteringDefault
end function RutherfordScatteringDefault

!! Create, general, const
function RutherfordScatteringCreateConst( &
) &
      bind(C, name='RutherfordScatteringCreateConst')
   use iso_c_binding
   implicit none
   type(c_ptr) :: RutherfordScatteringCreateConst
end function RutherfordScatteringCreateConst

!! Create, general, non-const
function RutherfordScatteringCreate( &
) &
      bind(C, name='RutherfordScatteringCreate')
   use iso_c_binding
   implicit none
   type(c_ptr) :: RutherfordScatteringCreate
end function RutherfordScatteringCreate

!! Assign
subroutine RutherfordScatteringAssign(handleLHS, handleRHS) &
      bind(C, name='RutherfordScatteringAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS
   type(c_ptr), intent(in), value :: handleRHS
end subroutine RutherfordScatteringAssign

!! Delete
subroutine RutherfordScatteringDelete(handle) &
      bind(C, name='RutherfordScatteringDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine RutherfordScatteringDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
!! File can be XML, JSON, or HDF5.
!! We'll examine the file's contents to determine its type automatically.
function RutherfordScatteringRead(handle, filename, filenameSize) &
      bind(C, name='RutherfordScatteringRead')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: RutherfordScatteringRead
end function RutherfordScatteringRead

!! Write to file
!! File can be XML, JSON, or HDF5.
!! We'll use filename's extension to determine the type you want written.
function RutherfordScatteringWrite(handle, filename, filenameSize) &
      bind(C, name='RutherfordScatteringWrite')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: RutherfordScatteringWrite
end function RutherfordScatteringWrite

!! Print to standard output, in our prettyprinting format
function RutherfordScatteringPrint(handle) &
      bind(C, name='RutherfordScatteringPrint')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: RutherfordScatteringPrint
end function RutherfordScatteringPrint

!! Print to standard output, as XML
function RutherfordScatteringPrintXML(handle) &
      bind(C, name='RutherfordScatteringPrintXML')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: RutherfordScatteringPrintXML
end function RutherfordScatteringPrintXML

!! Print to standard output, as JSON
function RutherfordScatteringPrintJSON(handle) &
      bind(C, name='RutherfordScatteringPrintJSON')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: RutherfordScatteringPrintJSON
end function RutherfordScatteringPrintJSON


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalRutherfordScattering
